@@ -32,6 +32,8 @@
 	- match "de" when locale is specified as "de_DE.ISO-8859-1@Munich".
 	- add versions to obsoletes.
 	- add %_install_langs to configure languages to be installed.
+	- add LC_ALL/LC_MESSAGES to query locale search.
+	- fix: segfault with "--sign" w/o supplying files (#4651).
 
 3.0.1 -> 3.0.2
 	- eliminate armv4 entries from rpmrc (Andrew E. Mileski).
